--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,6 @@ flutter:
         pluginClass: FlutterSecureStoragePlugin
 
 dependencies:
-  meta: '^1.3.0'
+  meta: '^1.3.0-nullsafety.6'
   flutter:
     sdk: flutter
