--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 4.0.0
 homepage: https://github.com/mogol/flutter_secure_storage
 
 environment:
-  sdk: '>=2.12.0-21.0.dev <3.0.0'
+  sdk: '>=2.12.0-29.10.beta <3.0.0'
   flutter: '>=1.24.0-8.0.pre.102 <2.0.0'
 
 flutter:
