--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ homepage: https://github.com/mogol/flutter_secure_storage
 
 environment:
   sdk: '>=2.12.0-29.10.beta <3.0.0'
-  flutter: '>=1.24.0-8.0.pre.102 <2.0.0'
+  flutter: '>=1.26.0-17.6.pre <2.0.0'
 
 flutter:
   plugin:
